     Test) suite for double profit (checking the tool and fallback in NIT).
   * If you use the legacy CLI options for single-system logging (`-s <system>`
     and `-l <logfile>`) along with newer tuple(s) for multiple-system logging
     (repeatable `-m <system,logfile>`), previously the single-system options
     were overridden by the tuple(s); now they become part of the list.
   * The `upsname` in the `system=upsname[@hostname[:port]]` parameter may
     be an asterisk `*` to query for devices currently served by the hostname.
   * Same log file may safely be used in different logging tuples (it is
     then recommended to use `%UPSHOST%` in a custom formatting string).
   * Fixed printing of `%UPSHOST%` when multiple systems are being logged.
   * A `%t` for a TAB character can now be used in the formatting string.
   * Added `-D` for debugging (and foregrounding by default), like with
     other NUT daemons.
   * Added systemd and SMF service integration. [#1803]

 - More systemd integration:
   * Introduced a `nut-sleep.service` unit which stops `nut.target` when a
     system sleep was requested, and starts it when the sleep is finished.
     This helps avoid NUT shutting down a woken-up system just because its
     power state was critical before the sleep (called as a `SHUTDOWNCMD`
     implementation by the end-user), and a next-read timestamp was not seen
     (deemed to be a stale UPS, meaning lost communications during critical
     state, so must go down ASAP). While not as elegant as native systemd
     "inhibitor interface" support, this approach does work. [#1833, #1070]
   * Introduced support for the "inhibitor interface" as well (should be
     available on systems with systemd version 183 or newer) for a better
     handling of the time jump specifically in the `upsmon` client via new
     `Inhibit()` method in `common.c`. [#1070]
   * As an extension of the logic introduced above, hopefully now `upsmon`