@@ -324,6 +324,9 @@ https://github.com/networkupstools/nut/milestone/11
      and `-l <logfile>`) along with newer tuple(s) for multiple-system logging
      (repeatable `-m <system,logfile>`), previously the single-system options
      were overridden by the tuple(s); now they become part of the list.
+   * Internally, changed from use of shared global variables to query one UPS
+     at a time, populated from the new list of tuples during each loop cycle,
+     to passing and using the new tuple structures directly.
    * The `upsname` in the `system=upsname[@hostname[:port]]` parameter may
      be an asterisk `*` to query for devices currently served by the hostname.
    * Same log file may safely be used in different logging tuples (it is
